# ADA-MLFlow

./: .gitignore  HOW_TO_USE.md  README.md  instructions.md  run.py
ada-ds/: .env.template  pyproject.toml
ada-ds/ada/: __init__.py  cli.py  instructions.py  paths.py  run.py
ada-ds/ada/agents/: data_analyst.py  data_understanding.py  evaluator.py  llm_client.py  ml_engineer.py  optimizer.py  task_profiler.py  testing_agent.py  token_tracker.py
ada-ds/ada/graph/: agent_graph.py
ada-ds/ada/tools/: runner.py
backend/: requirements.txt
backend/agents/: data_analyst.py  data_understanding.py  evaluator.py  llm_client.py  ml_engineer.py  optimizer.py  task_profiler.py  testing_agent.py  token_tracker.py
backend/api/: main.py
backend/gitlab_backend/: client.py  db.py  gitlab.db  instructions.py  main.py  pipeline.py  sample_issue.md
backend/graph/: agent_graph.py
backend/tools/: runner.py
dataset/: bank_test.csv  bank_train.csv  cars_test.csv
frontend/: index.html
frontend/src/: App.jsx
frontend/src/components/: AgentConsole.jsx  AnalysisTab.jsx  AnalysisViewer.jsx  PipelineDashboard.jsx  ResultsDashboard.jsx  TestingPage.jsx  UnderstandingTab.jsx  UploadScreen.jsx
