[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ada-ds"
version = "0.1.0"
description = "Ada — The Digital Data Scientist. Run an end-to-end AutoML pipeline locally from the CLI or Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
]

[project.scripts]
ada = "ada.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ada*"]
